--- a/news.html
+++ b/news.html
@@ -66,15 +66,14 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="courses.html">Courses</a></li>
-              <li><a href="teachers.html">Teachers</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="teachers.html">Offers</a></li>
               <li><a href="events.html">Events</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">About Us</a></li>
-                  <li><a href="courses.html">Courses</a></li>
+  
                   <li><a href="course-single.html">Course Single</a></li>
                   <li><a href="gallery.html">Gallery</a></li>
                   <li class="dropdown-submenu dropdown">
@@ -86,7 +85,7 @@
                       <li><a href="#">Second Level Menu</a></li>
                     </ul>
                   </li>
-                  <li class="active"><a href="news.html">News</a></li>
+                  <li><a href="news.html">News</a></li>
                 </ul>
               </li>
               <li><a href="contact.html">Contact</a></li>
