--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="teachers.html">Offers</a></li>
+              <li><a href="offers.html">Offers</a></li>
               <li><a href="events.html">Events</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
