--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="offers.html">Offers</a></li>
               <li><a href="events.html">Events</a></li>
               <li class="dropdown">
@@ -67,7 +67,7 @@
                   <li><a href="news.html">News</a></li>
                 </ul>
               </li>
-              <li><a href="contact.html">Contact</a></li>
+              <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
