--- a/offers.html
+++ b/offers.html
@@ -42,8 +42,8 @@
 
     <div id="navbar-collapse" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="offers.html">Offers</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="offers.html">Offers</a></li>
         <li><a href="events.html">Events</a></li>
         <li class="dropdown">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
