--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <li><a href="offers.html">Offers</a></li>
             <li><a href="events.html">Events</a></li>
             <li class="dropdown">
-              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
+              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html">About</a></li>
 
-                <li><a href="course-single.html">Course Single</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="course-single.html">Other Organizations</a></li>
+                <li><a href="gallery.html">Information about food insecurity</a></li>
                 <li class="dropdown-submenu dropdown">
                   <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
                   <ul class="dropdown-menu">
