--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li"><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="offers.html">Offers</a></li>
               <li class="active"><a href="events.html">Events</a></li>
               <li class="dropdown">
