--- a/contact.html
+++ b/contact.html
@@ -105,23 +105,23 @@
                   </div>
                 </div>
                 <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                  <h2>Get In Touch</h2>
-                  <p>Contact us using the form below.</p>
+                  <h2>Have Extra Points?</h2>
+                  <p>Post details and your contact information here to be found by people in the community.</p>
                   <form action="#" method="post" class="probootstrap-form">
                     <div class="form-group">
-                      <label for="name">Full Name</label>
+                      <label for="name">Name</label>
                       <input type="text" class="form-control" id="name" name="name">
                     </div>
                     <div class="form-group">
-                      <label for="email">Email</label>
+                      <label for="email">Contact Details</label>
                       <input type="email" class="form-control" id="email" name="email">
                     </div>
                     <div class="form-group">
-                      <label for="subject">Subject</label>
+                      <label for="subject">Number of Points</label>
                       <input type="text" class="form-control" id="subject" name="subject">
                     </div>
                     <div class="form-group">
-                      <label for="message">Message</label>
+                      <label for="message">Any Extra Details?</label>
                       <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
                     </div>
                     <div class="form-group">
