contact.html testing
slight tweak

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                       <input type="text" class="form-control" id="subject" name="subject">
                     </div>
                     <div class="form-group">
-                      <label for="message">Any Extra Details?</label>
+                      <label for="message">Details</label>
                       <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
                     </div>
                     <div class="form-group">
