--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords"
     content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/custom.css">
