--- a/contact.html
+++ b/contact.html
@@ -100,8 +100,7 @@
                   <ul class="probootstrap-side-menu">
 
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="teachers.html">Teachers</a></li>
+                    <li><a href="offers.html">Courses</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li class="active"><a>Contact Us</a></li>
@@ -129,7 +128,7 @@
                     <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
                   </div>
                   <div class="form-group">
-                    <input type="submit" class="btn btn-primary btn-lg" id="submit" name="submit" value="Send Message">
+                    <input type="submit" class="btn btn-primary btn-lg" id="submit" name="submit" value="Post">
                   </div>
                 </form>
               </div>
