--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/custom.css">
 
   <!--[if lt IE 9]>
