--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
               </div>
               <div class="probootstrap-text">
                 <span class="probootstrap-counter">
-                  <span class="js-counter" data-from="0" data-to="20203" data-speed="5000"
-                    data-refresh-interval="50">1</span>
+                  <span class="js-counter" data-from="0" data-to="20" data-speed="2000"
+                    data-refresh-interval="50">1</span>%
                 </span>
-                <span class="probootstrap-counter-label">Students Enrolled</span>
+                <span class="probootstrap-counter-label">of students have had food insecurity at some point while at
+                  SCU</span>
               </div>
             </div>
           </div>
@@ -167,10 +168,10 @@
               </div>
               <div class="probootstrap-text">
                 <span class="probootstrap-counter">
-                  <span class="js-counter" data-from="0" data-to="139" data-speed="5000"
-                    data-refresh-interval="50">1</span>
+                  <span class="js-counter" data-from="0" data-to="60" data-speed="2000"
+                    data-refresh-interval="50">1</span>%
                 </span>
-                <span class="probootstrap-counter-label">Certified Teachers</span>
+                <span class="probootstrap-counter-label">experience basic needs insecurity</span>
               </div>
             </div>
           </div>
@@ -182,7 +183,7 @@
               </div>
               <div class="probootstrap-text">
                 <span class="probootstrap-counter">
-                  <span class="js-counter" data-from="0" data-to="99" data-speed="5000"
+                  <span class="js-counter" data-from="0" data-to="99" data-speed="2000"
                     data-refresh-interval="50">1</span>%
                 </span>
                 <span class="probootstrap-counter-label">Passing to Universities</span>
@@ -197,7 +198,7 @@
               </div>
               <div class="probootstrap-text">
                 <span class="probootstrap-counter">
-                  <span class="js-counter" data-from="0" data-to="100" data-speed="5000"
+                  <span class="js-counter" data-from="0" data-to="100" data-speed="2000"
                     data-refresh-interval="50">1</span>%
                 </span>
                 <span class="probootstrap-counter-label">Parents Satisfaction</span>
