--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
             <div class="probootstrap-counter-wrap">
               <div class="probootstrap-icon">
-                <i class="icon-user-tie"></i>
+                <i class="icon-users2"></i>
               </div>
               <div class="probootstrap-text">
                 <span class="probootstrap-counter">
@@ -179,7 +179,7 @@
           <div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
             <div class="probootstrap-counter-wrap">
               <div class="probootstrap-icon">
-                <i class="icon-library"></i>
+                <i class="icon-users2"></i>
               </div>
               <div class="probootstrap-text">
                 <span class="probootstrap-counter">
@@ -208,256 +208,6 @@
         </div>
       </div>
     </section>
-
-    <section
-      class="probootstrap-section probootstrap-section-colored probootstrap-bg probootstrap-custom-heading probootstrap-tab-section"
-      style="background-image: url(img/slider_2.jpg)">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center section-heading probootstrap-animate">
-            <h2 class="mb0">Highlights</h2>
-          </div>
-        </div>
-      </div>
-      <div class="probootstrap-tab-style-1">
-        <ul class="nav nav-tabs probootstrap-center probootstrap-tabs no-border">
-          <li class="active"><a data-toggle="tab" href="#featured-news">Featured News</a></li>
-          <li><a data-toggle="tab" href="#upcoming-events">Upcoming Events</a></li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="probootstrap-section probootstrap-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-
-            <div class="tab-content">
-
-              <div id="featured-news" class="tab-pane fade in active">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="owl-carousel" id="owl1">
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_3.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, ut.</p>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_1.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, officia.</p>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_2.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolores.</p>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_3.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, earum.</p>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
-
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                    </div>
-                  </div>
-                </div>
-                <!-- END row -->
-                <div class="row">
-                  <div class="col-md-12 text-center">
-                    <p><a href="#" class="btn btn-primary">View all news</a></p>
-                  </div>
-                </div>
-              </div>
-              <div id="upcoming-events" class="tab-pane fade">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="owl-carousel" id="owl2">
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_3.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                            <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn,
-                              NYC</span>
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_1.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                            <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn,
-                              NYC</span>
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_2.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                            <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn,
-                              NYC</span>
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                      <div class="item">
-                        <a href="#" class="probootstrap-featured-news-box">
-                          <figure class="probootstrap-media"><img src="img/img_sm_3.jpg"
-                              alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-                          <div class="probootstrap-text">
-                            <h3>Tempora consectetur unde nisi</h3>
-                            <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                            <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn,
-                              NYC</span>
-                          </div>
-                        </a>
-                      </div>
-                      <!-- END item -->
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12 text-center">
-                    <p><a href="#" class="btn btn-primary">View all events</a></p>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="probootstrap-section probootstrap-bg-white probootstrap-border-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
-            <h2>Our Featured Courses</h2>
-            <p class="lead">Sed a repudiandae impedit voluptate nam Deleniti dignissimos perspiciatis nostrum porro
-              nesciunt</p>
-          </div>
-        </div>
-        <!-- END row -->
-        <div class="row">
-          <div class="col-md-6">
-            <div class="probootstrap-service-2 probootstrap-animate">
-              <div class="image">
-                <div class="image-bg">
-                  <img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by uicookies.com">
-                </div>
-              </div>
-              <div class="text">
-                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                <h3>Application Design</h3>
-                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi
-                  voluptatum architecto rerum error.</p>
-                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">2,928 students
-                    enrolled</span></p>
-              </div>
-            </div>
-
-            <div class="probootstrap-service-2 probootstrap-animate">
-              <div class="image">
-                <div class="image-bg">
-                  <img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by uicookies.com">
-                </div>
-              </div>
-              <div class="text">
-                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                <h3>Chemical Engineering</h3>
-                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi
-                  voluptatum architecto rerum error.</p>
-                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">7,202 students
-                    enrolled</span></p>
-              </div>
-            </div>
-
-          </div>
-          <div class="col-md-6">
-            <div class="probootstrap-service-2 probootstrap-animate">
-              <div class="image">
-                <div class="image-bg">
-                  <img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by uicookies.com">
-                </div>
-              </div>
-              <div class="text">
-                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                <h3>Math Major</h3>
-                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi
-                  voluptatum architecto rerum error.</p>
-                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">12,582 students
-                    enrolled</span></p>
-              </div>
-            </div>
-
-            <div class="probootstrap-service-2 probootstrap-animate">
-              <div class="image">
-                <div class="image-bg">
-                  <img src="img/img_sm_4.jpg" alt="Free Bootstrap Template by uicookies.com">
-                </div>
-              </div>
-              <div class="text">
-                <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                <h3>English Major</h3>
-                <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi
-                  voluptatum architecto rerum error.</p>
-                <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">9,582 students
-                    enrolled</span></p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
-
 
     <section class="probootstrap-section">
       <div class="container">
