--- a/new-offer.html
+++ b/new-offer.html
@@ -51,27 +51,16 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
             <li><a href="offers.html">Offers</a></li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
             <li class="dropdown">
-              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
+              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
                 <li><a href="about.html">About Us</a></li>
-
-                <li><a href="course-single.html">Course Single</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li class="dropdown-submenu dropdown">
-                  <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Second Level Menu</a></li>
-                    <li><a href="#">Second Level Menu</a></li>
-                    <li><a href="#">Second Level Menu</a></li>
-                    <li><a href="#">Second Level Menu</a></li>
-                  </ul>
-                </li>
-                <li><a href="news.html">News</a></li>
+                <li><a href="other-resources.html">Other Organizations</a></li>
+                <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
-            <li class="active"><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="new-offer.html">Post An Offer</a></li>
           </ul>
         </div>
       </div>
