--- a/index.html
+++ b/index.html
@@ -73,17 +73,19 @@
 
     <section class="flexslider">
       <ul class="slides">
-        <li style="background-image: url(img/slider_1.jpg)" class="overlay">
+        <li style="background-image: url(img/fountain_front.jpg)" class="overlay">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
                 <div class="probootstrap-slider-text text-center">
-                  <h1 class="probootstrap-heading probootstrap-animate">Your Bright Future is Our Mission</h1>
+                  <h1 class="probootstrap-heading probootstrap-animate">No student should ever go hungry
+                  </h1>
                 </div>
               </div>
             </div>
           </div>
         </li>
+        <!--
         <li style="background-image: url(img/slider_2.jpg)" class="overlay">
           <div class="container">
             <div class="row">
@@ -94,7 +96,6 @@
               </div>
             </div>
           </div>
-
         </li>
         <li style="background-image: url(img/slider_3.jpg)" class="overlay">
           <div class="container">
@@ -109,13 +110,13 @@
           </div>
         </li>
       </ul>
+      -->
     </section>
-
     <section class="probootstrap-section probootstrap-section-colored">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-left section-heading probootstrap-animate">
-            <h2>Welcome to School of Excellence</h2>
+            <h2>Connect with students with extra meal points</h2>
           </div>
         </div>
       </div>
@@ -140,6 +141,7 @@
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="probootstrap-section" id="probootstrap-counter">
@@ -213,9 +215,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
-            <h2>Meet Our Qualified Teachers</h2>
-            <p class="lead">Sed a repudiandae impedit voluptate nam Deleniti dignissimos perspiciatis nostrum porro
-              nesciunt</p>
+            <h2>Highlighted Offers</h2>
+            <p class="lead">Students looking to offer meal points!</p>
           </div>
         </div>
         <!-- END row -->
