--- a/index.html
+++ b/index.html
@@ -45,27 +45,16 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="offers.html">Offers</a></li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
             <li class="dropdown">
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
-                <li><a href="about.html">About</a></li>
-
-                <li><a href="course-single.html">Other Organizations</a></li>
-                <li><a href="gallery.html">Information about food insecurity</a></li>
-                <li class="dropdown-submenu dropdown">
-                  <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Submit Feedback</a></li>
-                    <li><a href="#">option 2</a></li>
-                    <li><a href="#">option 3</a></li>
-                    <li><a href="#">option 4</a></li>
-                  </ul>
-                </li>
-                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="other-resources.html">Other Organizations</a></li>
+                <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="new-offer.html">Post An Offer</a></li>
           </ul>
         </div>
       </div>
@@ -78,7 +67,7 @@
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
                 <div class="probootstrap-slider-text text-center">
-                  <h1 class="probootstrap-heading probootstrap-animate">No student should ever go hungry
+                  <h1 class="probootstrap-heading probootstrap-animate">No student should ever go hungry.
                   </h1>
                 </div>
               </div>
