--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
-            <li class="active"><a href="new-offer.html">Post An Offer</a></li>
+            <li><a href="new-offer.html">Post An Offer</a></li>
           </ul>
         </div>
       </div>
