darker links, updated links on new-offer

--- a/new-offer.html
+++ b/new-offer.html
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-left section-heading probootstrap-animate">
-            <h1 class="mb0">Contact Us</h1>
+            <h1 class="mb0">Post An Offer</h1>
           </div>
         </div>
       </div>
@@ -87,12 +87,13 @@
                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
                   <h3>Pages</h3>
                   <ul class="probootstrap-side-menu">
-
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="offers.html">Courses</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li><a href="offers.html">Offers</a></li>
+                    <li><a href="calendar.html">Calendar</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li class="active"><a>Contact Us</a></li>
+                    <li><a href="other-resources.html">Other Organizations</a></li>
+                    <li><a href="food-insecurity.html">About Food Insecurity</a></li>
+                    <li class="active"><a>Post An Offer</a></li>
                   </ul>
                 </div>
               </div>
