--- a/food-insecurity.html
+++ b/food-insecurity.html
@@ -49,14 +49,14 @@
 
         <div id="navbar-collapse" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="offers.html">Offers</a></li>
             <li><a href="calendar.html">Calendar</a></li>
             <li class="dropdown">
-              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
+              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="other-resources.html">Other Resources</a></li>
+                <li><a href="other-resources.html">Other Organizations</a></li>
                 <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
