--- a/index.html
+++ b/index.html
@@ -260,30 +260,20 @@
         <div class="row">
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              <h3>About The School</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab
-                minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet
-                alias</p>
-              <h3>Social</h3>
-              <ul class="probootstrap-footer-social">
-                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                <li><a href="#"><i class="icon-github"></i></a></li>
-                <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                <li><a href="#"><i class="icon-youtube"></i></a></li>
-              </ul>
+              <h3>About The Program</h3>
+              <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
+             
             </div>
           </div>
           <div class="col-md-3 col-md-push-1">
             <div class="probootstrap-footer-widget">
               <h3>Links</h3>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Teachers</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="offers.html">Offers</a></li>
+                <li><a href="calendar.html">Calendar</a></li>
+                <li><a href="other-resources.html">Additional Resources</a></li>
+                <li><a href="new-offer.html">Post an Offer</a></li>
               </ul>
             </div>
           </div>
