--- a/food-insecurity.html
+++ b/food-insecurity.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>uiCookies:Enlight &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
-  <meta name="description" content="Free Bootstrap Theme by uicookies.com">
+  <title>Food Insecurity</title>
+  <meta name="description" content="Food Insecurity">
   <meta name="keywords"
-    content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    content="food, insecurity, Santa Clara University">
 
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
