--- a/new-offer.html
+++ b/new-offer.html
@@ -69,14 +69,12 @@
     <section class="probootstrap-section probootstrap-section-colored">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-left section-heading probootstrap-animate">
-            <h1 class="mb0">Post An Offer</h1>
+          <div class="col-md-12 text-left section-heading probootstrap-animate mb0">
+            <h1 class="mb0">Current Offers</h1>
           </div>
         </div>
       </div>
     </section>
-
-
 
     <section class="probootstrap-section probootstrap-section-sm">
       <div class="container">
@@ -128,17 +126,6 @@
       </div>
     </section>
 
-    <section class="probootstrap-cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Get your admission now!</h2>
-            <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
-              data-animate-effect="fadeInLeft">Enroll</a>
-          </div>
-        </div>
-      </div>
-    </section>
     <footer class="probootstrap-footer probootstrap-bg">
       <div class="container">
         <div class="row">
