--- a/offers.html
+++ b/offers.html
@@ -62,8 +62,8 @@
     <section class="probootstrap-section probootstrap-section-colored">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-left section-heading probootstrap-animate">
-            <h1>Current Offers</h1>
+          <div class="col-md-12 text-left section-heading probootstrap-animate mb0">
+            <h1 class="mb0">Current Offers</h1>
           </div>
         </div>
       </div>
