--- a/other-resources.html
+++ b/other-resources.html
@@ -56,7 +56,7 @@
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="other-resources.html">Other Organizations</a></li>
+                <li><a href="other-resources.html">Other Resources</a></li>
                 <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
@@ -87,10 +87,13 @@
                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
                   <h3>More Courses</h3>
                   <ul class="probootstrap-side-menu">
-                    <li class="active"><a>Chemical Engineering</a></li>
-                    <li><a href="#">Application Design</a></li>
-                    <li><a href="#">Math Major</a></li>
-                    <li><a href="#">English Major</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="offers.html">Offers</a></li>
+                    <li><a href="calendar.html">Calendar</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="other-resources.html">Other Organizations</a></li>
+                    <li><a href="food-insecurity.html">About Food Insecurity</a></li>
+                    <li class="active"><a>Post An Offer</a></li>
                   </ul>
                 </div>
               </div>
