--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Get your admission now!</h2>
+            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Share your meal points!</h2>
             <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
               data-animate-effect="fadeInLeft">Enroll</a>
           </div>
