--- a/other-resources.html
+++ b/other-resources.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" href="img/icon.png">
 
   <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -91,9 +92,9 @@
                     <li><a href="offers.html">Offers</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="other-resources.html">Other Organizations</a></li>
+                    <li><a href="other-resources.html">Other Resources</a></li>
                     <li><a href="food-insecurity.html">About Food Insecurity</a></li>
-                    <li class="active"><a>Post An Offer</a></li>
+                    <li><a href="new-offer.html">Post An Offer</a></li>
                   </ul>
                 </div>
               </div>
@@ -120,11 +121,6 @@
     <section class="probootstrap-cta">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Get your admission now!</h2>
-            <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
-              data-animate-effect="fadeInLeft">Enroll</a>
-          </div>
         </div>
       </div>
     </section>
@@ -135,7 +131,7 @@
             <div class="probootstrap-footer-widget">
               <h3>About The Program</h3>
               <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
-             
+
             </div>
           </div>
           <div class="col-md-3 col-md-push-1">
@@ -152,12 +148,7 @@
           </div>
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              <h3>Contact Info</h3>
-              <ul class="probootstrap-contact-info">
-                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
-                <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
-                
-              </ul>
+
             </div>
           </div>
 
