--- a/new-offer.html
+++ b/new-offer.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" href="img/icon.png">
 
   <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -132,7 +133,7 @@
             <div class="probootstrap-footer-widget">
               <h3>About The Program</h3>
               <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
-             
+
             </div>
           </div>
           <div class="col-md-3 col-md-push-1">
@@ -149,7 +150,7 @@
           </div>
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              
+
             </div>
           </div>
 
