--- a/other-resources.html
+++ b/other-resources.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" href="img/icon.png">
 
   <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -91,25 +92,55 @@
                     <li><a href="offers.html">Offers</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="other-resources.html">Other Organizations</a></li>
+                    <li><a href="other-resources.html">Other Resources</a></li>
                     <li><a href="food-insecurity.html">About Food Insecurity</a></li>
-                    <li class="active"><a>Post An Offer</a></li>
+                    <li><a href="new-offer.html">Post An Offer</a></li>
                   </ul>
                 </div>
               </div>
               <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                <h2>Forge Garden</h2>
-                <p>Test :)</p>
-                <p>Velit natus alias eligendi architecto rem, itaque distinctio? Excepturi obcaecati fuga ratione.
-                  Dolore in ipsam rem ullam nemo error aperiam dolores eius, doloremque blanditiis placeat fugiat libero
-                  id atque, recusandae, voluptate laboriosam, distinctio omnis ab. Eius obcaecati, laudantium ex
-                  voluptatum voluptas, cum vitae molestiae quam est omnis nulla, quis velit? Esse natus tempore
-                  molestias deserunt, tempora illum labore, fuga animi totam dolore doloribus doloremque laudantium
-                  velit distinctio, non cumque dolorem delectus quia quibusdam? Amet, consectetur. Reprehenderit unde,
-                  eveniet temporibus, quae possimus magni. Dolore quo eveniet, distinctio dicta quisquam? Aliquid libero
-                  dolore provident, beatae odit facilis quasi dolorum sit ad minus!</p>
-                <h2>CalFresh</h2>
-                <p>Beep boop</p>
+                <h2><a href="https://www.scu.edu/sustainability/programs/theforge/">Forge Garden Farm Stand</h2>
+                <p>The Forge Garden Farm Stand is every Friday:
+                  11:30 a.m. to 12:30 p.m. - Student Hour: Please provide valid student ID when shopping at the farm
+                  stand
+                  12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand</p>
+                <p>The Forge Farm Stand provides affordable, Certified Organic produce grown in its ½ acre
+                  garden. The Farm Stand is sliding scale, donation-based. This means you pay what you can
+                  afford. No one will be turned away for lack of funds. The first hour of the farm stand is
+                  reserved for SCU students only. The farm stand is held at The Forge Garden except for the
+                  first week of the month, it is held as a pop-up at an alternative location.
+                <p>
+                <h2><a href="https://www.scu.edu/sustainability/programs/theforge/recipes/">Forge Garden Recipe Book<h2>
+                      <p>A recipe book of healthy food options compiled by the Forge Garden!
+                      <p>
+                      <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program<h2>
+                            <p>Through the program, students have the opportunity to gain access to the Bronco Pantry,
+                              donated gift cards to local stores, and are offered individual consultation sessions to
+                              gain access to additional community resources. The Bronco Pantry regularly stocks
+                              non-perishable food items and fresh produce in partnership with the SCU Forge Garden.
+                            <p></p>
+                          </h2></a></h2>
+                      </p>
+                      <h2><a href="https://www.getcalfresh.org/">CalFresh</h2>
+                      <p>California's food stamps (SNAP) program
+                      <ol>
+                        <li>Apply - Your county will call you within a week or two for an eligibility interview</li>
+                        <li>Get money - If approved, you will get an EBT card for groceries within 10 days</li>
+                        <li>Buy groceries - EBT cards work in most food stores and farmers’ markets</li>
+                      </ol>
+                      <ul>What will you need?
+                        <li>A copy of your ID
+                        <li>Proof of any income
+                        <li>Proof of immigration status (for non-citizens)
+                          <h2><a href="https://eatfresh.org/">EatFresh.org<h2>
+                                <p>EatFresh.org is an online recipe and nutrition resource for anyone who
+                                  wants to improve their health
+                                  EatFresh.org is a project of the California Department of Social Services
+                                  SNAP-Ed program
+                                  Find healthy recipes for all food groups
+                                  Find dietitian recommendations and advice
+
+                                </p>
               </div>
             </div>
           </div>
@@ -120,11 +151,6 @@
     <section class="probootstrap-cta">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Get your admission now!</h2>
-            <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
-              data-animate-effect="fadeInLeft">Enroll</a>
-          </div>
         </div>
       </div>
     </section>
@@ -135,7 +161,7 @@
             <div class="probootstrap-footer-widget">
               <h3>About The Program</h3>
               <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
-             
+
             </div>
           </div>
           <div class="col-md-3 col-md-push-1">
@@ -152,12 +178,7 @@
           </div>
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              <h3>Contact Info</h3>
-              <ul class="probootstrap-contact-info">
-                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
-                <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
-                
-              </ul>
+
             </div>
           </div>
 
