change to food insecurity
change

--- a/food-insecurity.html
+++ b/food-insecurity.html
@@ -396,17 +396,18 @@
 
         </div>
 
-      </div>
-
-      <div class="probootstrap-copyright">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 text-left">
-              <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed &amp;
-                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a></p>
-            </div>
-            <div class="col-md-4 probootstrap-back-to-top">
-              <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+        <div class="probootstrap-copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 text-left">
+                <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
+                  &amp;
+                  Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
+                </p>
+              </div>
+              <div class="col-md-4 probootstrap-back-to-top">
+                <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+              </div>
             </div>
           </div>
         </div>
