--- a/new-offer.html
+++ b/new-offer.html
@@ -125,55 +125,63 @@
         </div>
       </div>
     </section>
-    <footer class="probootstrap-footer probootstrap-bg">
+  </section>
+  <footer class="probootstrap-footer probootstrap-bg">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="probootstrap-footer-widget">
+            <h3>About The Program</h3>
+            <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
+
+          </div>
+        </div>
+        <div class="col-md-3 col-md-push-1">
+          <div class="probootstrap-footer-widget">
+            <h3>Links</h3>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="offers.html">Offers</a></li>
+              <li><a href="calendar.html">Calendar</a></li>
+              <li><a href="other-resources.html">Additional Resources</a></li>
+              <li><a href="new-offer.html">Post an Offer</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="probootstrap-footer-widget">
+            <h3>Contact Info</h3>
+            <ul class="probootstrap-contact-info">
+              <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
+              <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
+
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      <!-- END row -->
+
+    </div>
+
+    <div class="probootstrap-copyright">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <div class="probootstrap-footer-widget">
-              <h3>About The Program</h3>
-              <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
-             
-            </div>
+          <div class="col-md-8 text-left">
+            <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
+              &amp;
+              Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
+            </p>
           </div>
-          <div class="col-md-3 col-md-push-1">
-            <div class="probootstrap-footer-widget">
-              <h3>Links</h3>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="offers.html">Offers</a></li>
-                <li><a href="calendar.html">Calendar</a></li>
-                <li><a href="other-resources.html">Additional Resources</a></li>
-                <li><a href="new-offer.html">Post an Offer</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="probootstrap-footer-widget">
-              
-            </div>
-          </div>
-
-        </div>
-        <!-- END row -->
-
-      </div>
-
-      <div class="probootstrap-copyright">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 text-left">
-              <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed &amp;
-                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a></p>
-            </div>
-            <div class="col-md-4 probootstrap-back-to-top">
-              <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
-            </div>
+          <div class="col-md-4 probootstrap-back-to-top">
+            <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
-  </div>
+</div>
   <!-- END wrapper -->
 
 
