--- a/other-resources.html
+++ b/other-resources.html
@@ -181,7 +181,12 @@
           </div>
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
+              <h3>Contact Info</h3>
+              <ul class="probootstrap-contact-info">
+                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
+                <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
 
+              </ul>
             </div>
           </div>
 
@@ -194,17 +199,20 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 text-left">
-              <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed &amp;
-                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a></p>
+              <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
+                &amp;
+                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
+              </p>
             </div>
-            <div class <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+            <div class="col-md-4 probootstrap-back-to-top">
+              <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
             </div>
           </div>
         </div>
       </div>
     </footer>
 
-  </div>
+</div>
   <!-- END wrapper -->
 
 
