--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
             <div class="probootstrap-footer-widget">
               <h3>About The Program</h3>
               <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
-             
+
             </div>
           </div>
           <div class="col-md-3 col-md-push-1">
@@ -227,7 +227,12 @@
           </div>
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              
+              <h3>Contact Info</h3>
+              <ul class="probootstrap-contact-info">
+                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
+                <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
+
+              </ul>
             </div>
           </div>
 
@@ -240,8 +245,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 text-left">
-              <p>&copy; 2017 <a href="https://uicookes.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed &amp;
-                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookes.com/">uicookes.com</a></p>
+              <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
+                &amp;
+                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
+              </p>
             </div>
             <div class="col-md-4 probootstrap-back-to-top">
               <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
@@ -251,7 +258,7 @@
       </div>
     </footer>
 
-  </div>
+</div>
   <!-- END wrapper -->
 
   <script src="js/scripts.min.js"></script>
