omar's beautiful changes

--- a/other-resources.html
+++ b/other-resources.html
@@ -92,58 +92,45 @@
                     <li><a href="offers.html">Offers</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="other-resources.html">Other Resources</a></li>
+                    <li class="active">Other Resources</a></li>
                     <li><a href="food-insecurity.html">About Food Insecurity</a></li>
                     <li><a href="new-offer.html">Post An Offer</a></li>
                   </ul>
                 </div>
               </div>
               <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                <h2><a href="https://www.scu.edu/sustainability/programs/theforge/">Forge Garden Farm Stand</a>a></h2>
+                <h2><a href="https://www.scu.edu/sustainability/programs/theforge/">Forge Garden Farm Stand</a></h2>
                 <p>The Forge Garden Farm Stand is every Friday:
-                  <br>- 11:30 a.m. to 12:30 p.m. - Student Hour: Please provide valid student ID when shopping at the
-                  farm
-                  <br>- stand
-                  12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand
+                  <br>-11:30 a.m. to 12:30 p.m. - Student Hour: Please provide valid student ID when shopping at the farm stand
+                  <br>-12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand
                 </p>
                 <p>The Forge Farm Stand provides affordable, Certified Organic produce grown in its ½ acre
                   garden. The Farm Stand is sliding scale, donation-based. This means you pay what you can
                   afford. No one will be turned away for lack of funds. The first hour of the farm stand is
-                  reserved for SCU students only. The farm stand is held at The Forge Garden e/xc</script>ept for the
+                  reserved for SCU students only. The farm stand is held at The Forge Garden except for the
                   first week of the month, it is held as a pop-up at an alternative location.
-                  </a>p>
-                <p>
-                  /
-                <h2><a href="https://www.scu.edu/sustainability/programs/theforge/recipes/">Forge Garden R</a>a/>ecipe
-                  Book<h2>
-                    <p>A recipe book of healthy food options compiled by the Forge Garden!
-                    <p>
-                    <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program<h2>
-                          <p>Through the program, students have the opportunity to gain access to the Br/onco Pantry,
-                            donated gift cards to local stores, a</a>p>nd are offered individual consultation sessions
-                      to
-                      gain access to additional co</h2>p></p>mmunity resources. The Bronco Pantry regularly stocks
-                    non-perishable food items and fresh produce in partnership with the SCU Forge Garden.
-                    <p></p>
-                  </h2></a></h2>
                 </p>
-                <h2><a href="https://www.getcalfresh.org/">CalFresh</h2>
-                <p>California's food stamps (SNAP) program
+                <h2><a href="https://www.scu.edu/sustainability/programs/theforge/recipes/">Forge Garden Recipe Book</a></h2>
+                    <p>A recipe book of healthy food options compiled by the Forge Garden!</p>
+                    <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program</a></h2>
+                          <p>Through the program, students have the opportunity to gain access to the Bronco Pantry, donated gift cards to local stores, and are offered individual consultation sessions to gain access to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and fresh produce in partnership with the SCU Forge Garden.</p>
+                <h2><a href="https://www.getcalfresh.org/">CalFresh</a></h2>
+                <p>California's food stamps (SNAP) program</p>
                 <ol>
                   <li>Apply - Your county will call you within a week or two for an eligibility interview</li>
-                  <li>Get money - If approved, you will get an
-                    </ul>li>>p></p> EBT card for groceries within 10 days</li>
+                  <li>Get money - If approved, you will get an EBT card for groceries within 10 days</li>
                   <li>Buy groceries - EBT cards work in mos/t food stores and farmers’ markets</li>
                 </ol>
-                <ul>What will you need?
+                <p>What will you need?</p>
+                <ul>
                   <li>A copy of your ID
                   <li>Proof of any income
                   <li>Proof of immigration status (for non-citizens)
-                    <h2><a href="https://eatfresh.org/">
-                        <p> wants to improve their health EatFresh.org is a project of the
-                          California Department of Social Services SNAP-Ed program Find healthy recipes for all food
-                          groups Find dietitian recommendations and advice </p>
-                      </a>
+                  </ul>
+                    <h2><a href="https://eatfresh.org/">EatFresh.org</a></h2>
+                        <p>EatFresh.org is an online recipe and nutrition resource for anyone who wants to improve their health. EatFresh.org is a project of the California Department of Social Services SNAP-Ed program.
+                          <br>- Find healthy recipes for all food groups
+                          <br>- Find dietitian recommendations and advice</p>
               </div>
             </div>
           </div>
