--- a/calendar.html
+++ b/calendar.html
@@ -93,8 +93,9 @@
       </div>
     </section>
 
-    <iframe src="https://calendar.google.com/calendar/embed?src=c_osbvtgj4k5vprbocd0dm1lpgbg%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-    <iframe src="https://calendar.google.com/calendar/embed?src=k7km3664f0c04d6028io9nm6pk%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <p align="center"><iframe src="https://calendar.google.com/calendar/embed?src=c_osbvtgj4k5vprbocd0dm1lpgbg%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
+    <p></p>
+    <p align="center"><iframe src="https://calendar.google.com/calendar/embed?src=k7km3664f0c04d6028io9nm6pk%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
 
   
   <footer class="probootstrap-footer probootstrap-bg">
