--- a/calendar.html
+++ b/calendar.html
@@ -82,7 +82,7 @@
           <div class="col-md-12">
             <div class="probootstrap-flex-block">
               <div class="probootstrap-text probootstrap-animate">
-                <div class="text-uppercase probootstrap-uppercase">BroncoSec Recommended Events</div>
+                <div class="text-uppercase probootstrap-uppercase">BroncoShare Recommended Events</div>
                 <h3>Community Events</h3>
                 <p>We've collected hours for nearby places where you can buy food around Santa Clara University. The Forge Garden works on a donation-based system, and student offers can help to get food from Benson.</p>
                 <p><a href="other-resources.html" class="btn btn-primary">Learn More</a></p>
