--- a/index.html
+++ b/index.html
@@ -119,14 +119,10 @@
           <div class="col-md-12">
             <div class="probootstrap-flex-block">
               <div class="probootstrap-text probootstrap-animate">
-                <h3>About School</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo
-                  vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus
-                  optio accusantium!</p>
-                <p><a href="#" class="btn btn-primary">Learn More</a></p>
-              </div>
-              <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_3.jpg)">
-                <a href="https://vimeo.com/45830194" class="btn-video popup-vimeo"><i class="icon-play3"></i></a>
+                <h3>What is Bronco Share?</h3>
+                <p>Bronco Share is a platform for SCU students who have a
+                  surplus of dining points to offer some of those points to students with food insecurity
+                  in a more discrete fashion.</p>
               </div>
             </div>
           </div>
@@ -312,7 +308,7 @@
       </div>
     </footer>
 
-</div>
+  </div>
   <!-- END wrapper -->
 
 
