more resources added

--- a/other-resources.html
+++ b/other-resources.html
@@ -117,7 +117,7 @@
                   <p>Call 800-984-3663</p>
                   <p>1691 The Alameda, San Jose, CA 95126
                   <br>One block off campus!</p>
-                </h2><a href="https://www.shfb.org/nutrition-center/recipes/">SHFB Recipe Page</a>
+                </h2><a href="https://www.shfb.org/nutrition-center/recipes/">SHFB Recipe Page</a></h2>
                   <p>Find recipes for healthy and filling meals</p>
                 <h2>2-1-1</h2>
                   <p>If you are in immediate need of food assistance, please dial 2-1-1 from a phone and
@@ -128,7 +128,15 @@
                   <p>Saturdays
                   <br>9am-1pm
                   <br>950 Jackson St, Santa Clara, CA 95050</p>
-                <h2></h2>
+                <h2><a href="https://www.wcfma.org/rose-garden">Rose Garden Farmers Market</a></h2>
+                  <p>Saturdays
+                  <br>9am-1pm
+                  <br>577 Dana Street, San Jose, CA 95126</p>
+                <h2><a href="https://ecologycenter.org/fmfinder/">Farmers Market Finder</a></h2>
+                  <p>Find a farmers market near you!</p>
+                <h2><a href="https://www.findhelp.org/">FindHelp.org</a></h2>
+                  <p>Search and connect to support. Financial assistance, food pantries, medical care,
+                    and other free or reduced-cost help starts here</p>
               </div>
             </div>
           </div>
